sidebar menu is added

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
     justify-content: space-between;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background: #fff;
-    position: static;
+    position: sticky;
     top: 0;
     z-index: 10;
 }
@@ -58,4 +58,71 @@ nav{
 }
 .nav-middle .search-box img{
     width: 15px;
+}
+
+/* ----------------------sidebar----------------------- */
+.sidebar{
+    background: #fff;
+    width: 15%;
+    height: 100vh;
+    /* position: fixed; */
+    top: 0;
+    padding-left: 2%;
+    /* I edited the below padding-top:80px css */
+    padding-top: 30px;
+
+}
+.shortcut-links a img{
+    width: 20px;
+    margin-right: 20px;
+}
+.shortcut-links a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: fit-content;
+    flex-wrap: wrap;
+}
+.shortcut-links a:first-child{
+    color: #ed3833;
+}
+.sidebar hr{
+    border: 0px;
+    height: 1px;
+    background: #ccc;
+    width: 85%;
+}
+
+.subscribed-list{
+    margin-bottom: 20px;
+}
+.subscribed-list h3{
+    font-size: 13px;
+    margin: 20px 0px;
+    color: #5a5a5a;
+}
+.subscribed-list a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: fit-content;
+    flex-wrap: wrap;
+}
+.subscribed-list a img{
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.small-sidebar{
+    width: 5%;
+}
+.small-sidebar a p{
+    display: none;
+}
+.small-sidebar h3{
+    display: none;
+}
+.small-sidebar hr{
+    width: 50%;
+    margin-bottom: 25px;
 }
