--- a/style.css
+++ b/style.css
@@ -64,12 +64,17 @@ nav{
 .sidebar{
     background: #fff;
     width: 15%;
-    height: 100vh;
-    /* position: fixed; */
+    height: 150vh;
+    /*Most Important Point to be noted */
+    /* for the position of fixed, sidebar is constant. We cannot move the sidebar for that 
+    reason our two subscribed people are not seen. for this fixed position main section is 
+    at upper without display flex. You can trial by fixing position sticky or static or other
+    then you will be able to understand the differences */
+    position: fixed;
     top: 0;
     padding-left: 2%;
     /* I edited the below padding-top:80px css */
-    padding-top: 30px;
+    padding-top: 80px;
 
 }
 .shortcut-links a img{
@@ -125,4 +130,58 @@ nav{
 .small-sidebar hr{
     width: 50%;
     margin-bottom: 25px;
+}
+
+/* ----------------------main----------------- */
+.container{
+    background: #f9f9f9;
+    padding-left: 17%;
+    padding-right: 2%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.large-container{
+    padding-left: 7%;
+}
+
+.banner{
+    width: 100%;
+}
+.banner img{
+    width: 100%;
+    border-radius: 8px;
+}
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    column-gap: 16px;
+    row-gap: 30px;
+    margin-top: 15px;
+}
+.vid-list .thumbnail{
+
+    width: 100%;
+    border-radius: 5px;
+}
+
+.vid-list .flex-div{
+    align-items: flex-start;
+    margin-top: 7px;
+}
+
+.vid-list .flex-div img{
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+.vid-info{
+    color: #5a5a5a;
+    font-size: 13px;
+}
+.vid-info a{
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 5px;
 }
